--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -14,428 +14,6 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * {{audio|EN-AU ck1 cut.ogg|Audio (AU)|lang=en}}
 * {{rhymes|ʌt|lang=en}}
 
-===Adjective===
-{{rfc|en}}
-{{en-adj}}
-
-# {{lb|en|participial adjective}} Having been '''cut'''.
-# [[reduce|Reduced]].
-#: {{ux|en|The [[pitcher]] threw a '''cut''' [[fastball]] that was slower than his usual [[pitch]].}}
-#: {{ux|en|'''Cut''' brandy is a liquor made of brandy and hard grain liquor.}}
-# Omitted from a literary or musical work.
-#: {{ux|en|My favourite song had been '''cut''' from the show.}}
-# {{lb|en|of a gem}} [[carve|Carve]]d into a [[shape]]; not [[raw]].
-# {{rfc-sense|en}} {{lb|en|cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of [[point]].
-# {{lb|en|bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
-#* '''1988''', Steve Holman, "Christian Conquers Columbus", ''[[w:Iron Man (magazine)|Ironman]]'' '''47 (6):''' 28-34.
-#*: Or how 'bout Shane DiMora? Could he possibly get rip-roaring '''cut''' this time around?
-#* '''2010''', Bill Geiger, "6-pack Abs in 9 Weeks", ''Reps!'' '''17''':106
-#*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
-# {{lb|en|informal}} [[circumcised|Circumcised]] or having been the subject of [[female genital mutilation]]
-# {{lb|en|Australia|NZ|slang}} Emotionally [[hurt]].
-# Eliminated from consideration during a recruitment drive.
-# Removed from a team roster.
-# {{lb|en|NZ}} Intoxicated as a result of drugs or alcohol.
-
-====Synonyms====
-* {{sense|intoxicated}} See [[Thesaurus:drunk]]
-
-====Derived terms====
-{{der2|lang=en
-|clear-cut
-|Cut Bank
-|cutbank
-|offcut
-|point-cut
-}}
-
-====Related terms====
-{{rel2|lang=en|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake}}
-
-====Translations====
-{{trans-top|having been cut}}
-* Afrikaans: {{t|af|gesnyde}}
-* Assamese: {{t|as|কাট}}
-* Danish: {{t+|da|skære|alt=skåret}}
-* Dutch: {{t+|nl|snijden|alt=gesneden}}
-* Finnish: {{t+|fi|leikattu}}
-* French: {{t+|fr|coupé}}, {{t+|fr|coupée}}, {{t+|fr|coupés}}, {{t+|fr|coupées}}
-* German: {{t+|de|geschnitten}}
-* Greek: {{t+|el|κομμένος}}
-* Hebrew: {{t|he|חתוך|tr=khatúkh}}
-* Italian: {{t+|it|tagliato|m}}, {{t+|it|ritagliato|m}}, {{t+|it|accorciato|m}}, {{t+|it|ridotto|m}}
-{{trans-mid}}
-* Malay: {{t|ms|putus}}, {{t|ms|terpotong}}
-* Old English: {{t+|ang|gesniden}}
-* Old Saxon: {{t|osx|gisnidan}}
-* Portuguese: {{t|pt|cortado}}
-* Romanian: {{t+|ro|tăiat}}
-* Russian: {{t+|ru|ре́заный}}, {{t|ru|наре́заный}}, {{t|ru|поре́заный}}, {{t|ru|разре́заный}}
-* Spanish: {{t+|es|cortado}}
-* Swedish: {{t+|sv|klippt}}, {{t+|sv|skuren}}
-* Turkish: {{t+|tr|kesik}}
-* Vietnamese: {{t+|vi|cắt}}
-{{trans-bottom}}
-
-{{trans-top|reduced}}
-* Assamese:
-*: Central: {{t|as|কাটা}}
-*: Eastern: {{t|as|কটা}}
-* Bengali: {{t|bn|কাটা}}
-* Finnish: {{t+|fi|leikattu}}, {{t+|fi|vähennetty}}, {{t|fi|kevennetty}}, {{t|fi|heikennetty}}
-* German: {{t+|de|geschnitten}}
-{{trans-mid}}
-* Greek: {{t+|el|κομμένος}}
-* Italian: {{t+|it|ridotto}}, {{t+|it|tagliato}}, {{t+|it|accorciato}}, {{t+|it|ritagliato|m}}, {{t+|it|potato|m}}
-* Portuguese: {{t+|pt|reduzido}}
-* Russian: {{t|ru|уре́заный}}
-* Zazaki: {{t|zza|qesn}}
-{{trans-bottom}}
-
-{{trans-top|omitted from a literary or musical work}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|of a gem, carved into a shape}}
-* Danish: {{t|da|slebet}}
-* Dutch: {{t+|nl|geslepen}}
-* Finnish: {{t+|fi|hioa|alt=hiottu}}
-* French: {{t+|fr|taillé}}
-* German: {{t+|de|geschnitten}}, {{t+|de|geschliffen}}
-{{trans-mid}}
-* Italian: {{t+|it|tagliato}}
-* Portuguese: {{t|pt|lapidado}}
-* Romanian: {{t+|ro|tăiat}}
-* Russian: {{t+|ru|огранённый}}
-* Spanish: {{t+|es|tallado}}
-{{trans-bottom}}
-
-{{trans-top|cricket: played with a horizontal bat}}
-* Zazaki: {{t|zza|bırnayen}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|bodybuilding: having individual groups of muscle fibers stand out}}
-* German: {{t+|de|geschnitten}}
-{{trans-mid}}
-* Italian: {{t+|it|scolpito|m}}, {{t+|it|cesellato|m}}
-{{trans-bottom}}
-
-{{trans-top|colloquial: circumcised (see also [[circumcised]])}}<!-- Only colloquial expressions here! Add normal language terms to "circumcised" -->
-* Finnish: {{t|fi|silvottu}}
-* Greek: {{t+|el|περιτετμημένος}}
-* Italian: {{t+|it|circonciso|m}}
-* Portuguese: {{t|pt|circuncidado}}
-{{trans-mid}}
-* Russian: {{t|ru|обре́заный}}
-* Spanish: {{t+|es|circuncidado}}
-{{trans-bottom}}
-
-{{trans-top|slang: emotionally hurt}}
-* Finnish: {{t+|fi|loukkaantunut}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|eliminated from consideration during a recruitment drive}}
-* Finnish: {{t+|fi|karsittu}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|removed from a team roster}}
-* Finnish: {{t+|fi|pudotettu}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|intoxicated as a result of drugs or alcohol}}
-* Finnish: {{t+|fi|päihtynyt}}
-{{trans-mid}}
-{{trans-bottom}}
-
-===Noun===
-{{en-noun}}
-[[File:Max-cut.svg|thumb|A '''cut''' (graph theory sense) in a graph with five vertices, which partitioned it into two subgroups (one with white vertices and another with black vertices).]]
-
-# An opening resulting from cutting.
-#: {{ux|en|Look at this '''cut''' on my finger!}}
-# The act of [[cutting]].
-#: {{ux|en|He made a fine '''cut''' with his sword.}}
-# The [[result]] of cutting.
-#: {{ux|en|a smooth or clear '''cut'''}}
-# A notch, passage, or channel made by cutting or digging; a furrow; a groove.
-#: {{ux|en|a '''cut''' for a railroad}}
-#* Knolles
-#*: This great '''cut''' or ditch Secostris {{...}} purposed to have made a great deal wider and deeper.
-# (specifically) An artificial [[navigation]] as distinguished from a [[navigable]] river
-# A [[share]] or [[portion]].
-#: {{ux|en|The lawyer took a '''cut''' of the profits.}}
-# {{lb|en|cricket}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
-# {{lb|en|cricket}} [[sideways|Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
-# {{lb|en|sports}} In [[lawn tennis]], etc., a slanting stroke causing the ball to spin and bound irregularly; also, the spin thus given to the ball.
-# {{lb|en|golf}} In a strokeplay competition, the early elimination of those players who have not then attained a preannounced score, so that the rest of the competition is less pressed for time and more entertaining for spectators.
-# {{lb|en|theatre}} A passage omitted or to be omitted from a play.
-#: {{ux|en|The [[director]] asked the [[cast]] to note down the following '''cuts'''.}}
-# {{lb|en|cinema}} A particular version or [[edit]] of a film.
-# The act or right of dividing a deck of playing cards.
-#: {{ux|en|The player next to the dealer makes a '''cut''' by placing the bottom half on top.}}
-# The manner or style a garment etc. is fashioned in.
-#: {{ux|en|I like the '''cut''' of that suit.}}
-#* Shakespeare
-#*: with eyes severe and beard of formal '''cut'''
-# A [[slab]], especially of meat.
-#: {{ux|en|That’s our finest '''cut''' of meat.}}
-# {{lb|en|fencing}} An attack made with a chopping motion of the blade, landing with its edge or point.
-# A deliberate [[snub]], typically a refusal to return a [[bow]] or other acknowledgement of acquaintance.
-#* Washington Irving
-#*: Rip called him by name, but the cur snarled, snapped his teeth, and passed on. This was an unkind '''cut''' indeed.
-# A definable part, such as an individual [[song]], of a [[recording]], particularly of [[commercial]] records, [[audio]] [[tape]]s, [[CD]]s, etc.
-#: {{ux|en|The drummer on the last '''cut''' of their CD is not identified.}}
-# {{lb|en|archaeology}} A [[truncation]], a context that represents a moment in time when other archaeological [[deposit]]s were removed for the creation of some feature such as a [[ditch]] or [[pit]].
-# A [[haircut]].
-# {{lb|en|graph theory}} The [[partition]] of a [[graph]]’s [[vertex|vertices]] into two subgroups.
-# A string of railway cars coupled together.
-# An engraved block or plate; the impression from such an engraving.
-#: {{ux|en|a book illustrated with fine '''cuts'''}}
-# {{lb|en|obsolete}} A common [[workhorse]]; a [[gelding]].
-#* Beaumont and Fletcher
-#*: He'll buy me a '''cut''', forth for to ride.
-# {{lb|en|slang|dated}} The failure of a [[college]] [[officer]] or [[student]] to be present at any appointed exercise.
-# A [[skein]] of [[yarn]].
-#: {{rfquotek|Wright}}
-# {{lb|en|slang}} That which is used to dilute or adulterate a recreational drug.
-#: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
-# {{lb|en|fashion}} A notch shaved into an eyebrow.
-# {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
-
-====Derived terms====
-{{der3|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|{{l|en|final cut}}, {{l|en|make the final cut}}|fine cut|French cut|{{l|en|jump cut}}, {{l|en|jump-cut}}|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut|lang=en}}
-
-====Translations====
-{{trans-top|opening resulting from cutting}}
-* Aromanian: {{t|rup|tãljiturã|f}}
-* Bulgarian: {{t+|bg|разрез|m}}
-* Danish: {{t|da|snitsår|n}}, {{t|da|skramme|c}}
-* Dutch: {{t+|nl|snee}}
-* Finnish: {{t+|fi|haava}}, {{t+|fi|viilto}}, {{t|fi|viiltohaava}}
-* French: {{t+|fr|coupure|f}}, {{t+|fr|entaille|f}}
-* Galician: {{t+|gl|corte|m}}
-* German: {{t+|de|Schnitt|m}}
-* Greek: {{t+|el|κόψιμο|n}}, {{t+|el|τομή|f}}
-*: Ancient Greek: {{t|grc|τομή|f}}
-* Hebrew: {{t+|he|חתך|m|tr=khétekh}}
-* Icelandic: {{t+|is|skurður|m}}
-* Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
-{{trans-mid}}
-* Kurdish:
-*: Central Kurdish: {{t|ckb|برین}}
-* Maori: {{t|mi|motunga}}
-* Portuguese: {{t+|pt|corte|m}}
-* Romanian: {{t+|ro|tăietură|f}}, {{t+|ro|incizie|f}}
-* Russian: {{t+|ru|поре́з|m}} ''wound'', {{t+|ru|разре́з|m}}
-* Scottish Gaelic: {{t|gd|gearradh|m}}
-* Spanish: {{t+|es|corte|m}}
-* Sundanese: {{t|su|raheut}}
-* Swedish: {{t+|sv|skärsår|n}}
-* Tagalog: {{t|tl|hiwa}}
-* Turkish: {{t+|tr|kesik}}
-* Zazaki: {{t|zza|değiz}}
-{{trans-bottom}}
-
-{{trans-top|act of cutting}}
-* Bulgarian: {{t+|bg|рязане|n}}
-* Czech: {{t+|cs|řez}}, {{t|cs|říznutí}}
-* Danish: {{t|da|hug|n}}
-* Finnish: {{t+|fi|leikkaus}}, {{t+|fi|viilto}}
-* French: {{t+|fr|coupe|f}}, {{t+|fr|entaille|f}}
-* Galician: {{t+|gl|corte|m}}
-* Georgian: {{t|ka|გაჭრა}}
-* German: {{t+|de|Schnitt|m}}
-* Greek: {{t+|el|κόψιμο}}
-* Hebrew: {{t|he|חיתוך|m|tr=khitúkh}}
-* Icelandic: {{t+|is|skurður|m}}
-{{trans-mid}}
-* Italian: {{t+|it|taglio|m}}
-* Latvian: {{t|lv|cirtiens}}
-* Norwegian: {{t|no|kutt|n}}
-* Portuguese: {{t+|pt|corte|m}}
-* Romanian: {{t+|ro|tăiere|f}}
-* Russian: {{t+|ru|ре́зание|n}}
-* Scottish Gaelic: {{t|gd|gearradh|m}}
-* Spanish: {{t+|es|corte|m}}
-* Swedish: {{t+|sv|snitt|n}}
-* Turkish: {{t+|tr|kesme}}
-* Zazaki: {{t|zza|qesnayış}}, {{t|zza|qesnaış}} {{qualifier|Northern Zazaki}}
-{{trans-bottom}}
-
-{{trans-top|result of cutting}}
-* Danish: {{t|da|snit|n}}
-* Finnish: {{t+|fi|leikkaus}}, {{t+|fi|viilto}}; {{t|fi|viipale}}, {{t|fi|siivu}}; {{t+|fi|haava}} {{q|wound}}
-* French: {{t+|fr|coupe|f}}
-* Galician: {{t+|gl|corte|m}}
-* German: {{t+|de|Schnitt|m}}
-* Icelandic: {{t|is|afskurður|m}}
-{{trans-mid}}
-* Italian: {{t+|it|taglio|m}}
-* Portuguese: {{t+|pt|corte|m}}
-* Romanian: {{t+|ro|tăietură|f}}
-* Scottish Gaelic: {{t|gd|gearradh|m}}
-* Spanish: {{t+|es|corte|m}}
-* Swedish: {{t+|sv|snitt|n}}
-{{trans-bottom}}
-
-{{trans-top|notch, passage, or channel made by cutting or digging}}
-* Finnish: {{t+|fi|leikkaus}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|artificial navigation as distinguished from a navigable river}}
-* Finnish: {{t+|fi|kanava}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|share or portion}}
-* Finnish: {{t|fi|osuus}}; {{t|fi|siivu}} {{q|informal}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|in cricket, batsman's shot played with a swinging motion}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|in cricket, sideways movement of the ball through the air}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|lawn tennis: slanting stroke; resulting spin}}
-* Finnish: {{t|fi|kierrelyönti}} {{q|stroke}}; {{t|fi|kierre}} {{q|spin}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|golf: early elimination of worse performers}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|theatre: passage omitted or to be omitted from a play}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|cinema: particular version or edit of a film}}
-* Finnish: {{t|fi|versio}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|act of deviding a deck of playing cards}}
-* Czech: {{t|cs|snímání}}
-* Danish: {{t|da|aftagning|c}}
-* Finnish: {{t+|fi|nosto}}
-* French: {{t+|fr|coupe|f}}
-* Greek: {{t+|el|κόψιμο|n}}
-* Italian: {{t+|it|alzata|f}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|corte|f}}
-* Romanian: {{t+|ro|tăiere|f}}
-* Swedish: {{t+|sv|giv|c}}
-* Turkish: {{t+|tr|kesmek}}
-* Zazaki: {{t|zza|qesnayen}}, {{t|zza|bırnayen}} {{qualifier|Central Zazaki}}, {{t|zza|cı kerden}} {{qualifier|Northern Zazaki}}
-{{trans-bottom}}
-
-{{trans-top|manner or style a garment is fashioned in}}
-* Bulgarian: {{t+|bg|кройка|f}}
-* Catalan: {{t|ca|costura|f}}
-* Danish: {{t|da|snit|n}}, {{t|da|mode|c}}
-* Dutch: {{t+|nl|snit}}
-* Finnish: {{t+|fi|leikkaus}}
-* French: {{t+|fr|coupe|f}}
-* German: {{t+|de|Schnitt|m}}
-* Greek: {{t+|el|κόψιμο|n}}
-{{trans-mid}}
-* Icelandic: {{t+|is|snið|n}}
-* Italian: {{t+|it|taglia|f}}, {{t+|it|taglio|m}}
-* Portuguese: {{t+|pt|corte|m}}
-* Russian: {{t+|ru|покро́й|m}}
-* Spanish: {{t+|es|corte|m}}
-* Swedish: {{t|sv|skärning|c}}, {{t+|sv|snitt|n}}
-* Turkish: {{t+|tr|kesim}}
-* Zazaki: {{t|zza|bırnayış}}, {{t|zza|qesnayış}} {{qualifier|Central zazaki}}
-{{trans-bottom}}
-
-{{trans-top|slab of meat}}
-* Danish: {{t|da|udskæring|c}}, {{t+|da|stykke|n}}
-* Dutch: {{t+|nl|stuk|n}}
-* Finnish: {{t+|fi|pala}}
-* French: {{t+|fr|coupe|f}}
-* Greek: {{t+|el|κομμάτι|n}}
-* Hebrew: {{t+|he|חתיכה|f|tr=khatikhá}}
-{{trans-mid}}
-* Italian: {{t+|it|taglio|m}}, {{t+|it|pezzo|m}}
-* Norwegian:
-*: Bokmål: {{t+|nb|stykningsdel|m}}, {{t+|nb|stykke|n}}
-* Portuguese: {{t+|pt|corte|m}}
-* Spanish: {{t+|es|corte|m}}
-{{trans-bottom}}
-
-{{trans-top|fencing: attack made with a chopping motion of the blade}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|deliberate snub}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|definable part of a music recording}}
-* Finnish: {{t+|fi|piisi}}, {{t|fi|biisi}}, {{l|fi|raita}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|archaeology: truncation}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-see|haircut}}
-
-{{trans-top|partition of a graph’s vertices into two subgroups}}
-* Finnish: {{t+|fi|leikkaus}}
-* Italian: {{t+|it|taglio|m}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|corte|m}}
-{{trans-bottom}}
-
-{{trans-top|string of railway cars coupled together}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|engraved block or plate; the impression from such an engraving}}
-* Finnish: {{t|fi|kaiverrus}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-see|common workhorse|gelding}}
-
-{{trans-top|failure of a college officer or student to be present at any appointed exercise}}
-* Finnish: {{t|fi|ohari}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-see|skein of yarn|skein}}
-
-{{trans-top|slang: that which is used to dilute or adulterate a recreational drug}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|fashion: notch shaved into an eyebrow}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|bodybuilding: time period when one tries to lose fat while retaining muscle mass}}
-* Finnish: {{t|fi|rasvanpolttokausi}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{checktrans-top}}
-* Romanian: {{t+check|ro|tăietură}}
-{{trans-mid}}
-* {{ttbc|te}}: {{t+check|te|కోత}}, {{t+check|te|గాటు}}
-{{trans-bottom}}
-
 ===Verb===
 {{en-verb|cuts|cutting|cut}}
 
@@ -913,6 +491,428 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 ====See also====
 * {{l|en|copy}}
 * {{l|en|paste}}
+
+===Adjective===
+{{rfc|en}}
+{{en-adj}}
+
+# {{lb|en|participial adjective}} Having been cut.
+# [[reduce|Reduced]].
+#: {{ux|en|The [[pitcher]] threw a '''cut''' [[fastball]] that was slower than his usual [[pitch]].}}
+#: {{ux|en|'''Cut''' brandy is a liquor made of brandy and hard grain liquor.}}
+# Omitted from a literary or musical work.
+#: {{ux|en|My favourite song had been '''cut''' from the show.}}
+# {{lb|en|of a gem}} [[carve|Carve]]d into a [[shape]]; not [[raw]].
+# {{rfc-sense|en}} {{lb|en|cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of [[point]].
+# {{lb|en|bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
+#* '''1988''', Steve Holman, "Christian Conquers Columbus", ''[[w:Iron Man (magazine)|Ironman]]'' '''47 (6):''' 28-34.
+#*: Or how 'bout Shane DiMora? Could he possibly get rip-roaring '''cut''' this time around?
+#* '''2010''', Bill Geiger, "6-pack Abs in 9 Weeks", ''Reps!'' '''17''':106
+#*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
+# {{lb|en|informal}} [[circumcised|Circumcised]] or having been the subject of [[female genital mutilation]]
+# {{lb|en|Australia|NZ|slang}} Emotionally [[hurt]].
+# Eliminated from consideration during a recruitment drive.
+# Removed from a team roster.
+# {{lb|en|NZ}} Intoxicated as a result of drugs or alcohol.
+
+====Synonyms====
+* {{sense|intoxicated}} See [[Thesaurus:drunk]]
+
+====Derived terms====
+{{der2|lang=en
+|clear-cut
+|Cut Bank
+|cutbank
+|offcut
+|point-cut
+}}
+
+====Related terms====
+{{rel2|lang=en|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake}}
+
+====Translations====
+{{trans-top|having been cut}}
+* Afrikaans: {{t|af|gesnyde}}
+* Assamese: {{t|as|কাট}}
+* Danish: {{t+|da|skære|alt=skåret}}
+* Dutch: {{t+|nl|snijden|alt=gesneden}}
+* Finnish: {{t+|fi|leikattu}}
+* French: {{t+|fr|coupé}}, {{t+|fr|coupée}}, {{t+|fr|coupés}}, {{t+|fr|coupées}}
+* German: {{t+|de|geschnitten}}
+* Greek: {{t+|el|κομμένος}}
+* Hebrew: {{t|he|חתוך|tr=khatúkh}}
+* Italian: {{t+|it|tagliato|m}}, {{t+|it|ritagliato|m}}, {{t+|it|accorciato|m}}, {{t+|it|ridotto|m}}
+{{trans-mid}}
+* Malay: {{t|ms|putus}}, {{t|ms|terpotong}}
+* Old English: {{t+|ang|gesniden}}
+* Old Saxon: {{t|osx|gisnidan}}
+* Portuguese: {{t|pt|cortado}}
+* Romanian: {{t+|ro|tăiat}}
+* Russian: {{t+|ru|ре́заный}}, {{t|ru|наре́заный}}, {{t|ru|поре́заный}}, {{t|ru|разре́заный}}
+* Spanish: {{t+|es|cortado}}
+* Swedish: {{t+|sv|klippt}}, {{t+|sv|skuren}}
+* Turkish: {{t+|tr|kesik}}
+* Vietnamese: {{t+|vi|cắt}}
+{{trans-bottom}}
+
+{{trans-top|reduced}}
+* Assamese:
+*: Central: {{t|as|কাটা}}
+*: Eastern: {{t|as|কটা}}
+* Bengali: {{t|bn|কাটা}}
+* Finnish: {{t+|fi|leikattu}}, {{t+|fi|vähennetty}}, {{t|fi|kevennetty}}, {{t|fi|heikennetty}}
+* German: {{t+|de|geschnitten}}
+{{trans-mid}}
+* Greek: {{t+|el|κομμένος}}
+* Italian: {{t+|it|ridotto}}, {{t+|it|tagliato}}, {{t+|it|accorciato}}, {{t+|it|ritagliato|m}}, {{t+|it|potato|m}}
+* Portuguese: {{t+|pt|reduzido}}
+* Russian: {{t|ru|уре́заный}}
+* Zazaki: {{t|zza|qesn}}
+{{trans-bottom}}
+
+{{trans-top|omitted from a literary or musical work}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|of a gem, carved into a shape}}
+* Danish: {{t|da|slebet}}
+* Dutch: {{t+|nl|geslepen}}
+* Finnish: {{t+|fi|hioa|alt=hiottu}}
+* French: {{t+|fr|taillé}}
+* German: {{t+|de|geschnitten}}, {{t+|de|geschliffen}}
+{{trans-mid}}
+* Italian: {{t+|it|tagliato}}
+* Portuguese: {{t|pt|lapidado}}
+* Romanian: {{t+|ro|tăiat}}
+* Russian: {{t+|ru|огранённый}}
+* Spanish: {{t+|es|tallado}}
+{{trans-bottom}}
+
+{{trans-top|cricket: played with a horizontal bat}}
+* Zazaki: {{t|zza|bırnayen}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|bodybuilding: having individual groups of muscle fibers stand out}}
+* German: {{t+|de|geschnitten}}
+{{trans-mid}}
+* Italian: {{t+|it|scolpito|m}}, {{t+|it|cesellato|m}}
+{{trans-bottom}}
+
+{{trans-top|colloquial: circumcised (see also [[circumcised]])}}<!-- Only colloquial expressions here! Add normal language terms to "circumcised" -->
+* Finnish: {{t|fi|silvottu}}
+* Greek: {{t+|el|περιτετμημένος}}
+* Italian: {{t+|it|circonciso|m}}
+* Portuguese: {{t|pt|circuncidado}}
+{{trans-mid}}
+* Russian: {{t|ru|обре́заный}}
+* Spanish: {{t+|es|circuncidado}}
+{{trans-bottom}}
+
+{{trans-top|slang: emotionally hurt}}
+* Finnish: {{t+|fi|loukkaantunut}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|eliminated from consideration during a recruitment drive}}
+* Finnish: {{t+|fi|karsittu}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|removed from a team roster}}
+* Finnish: {{t+|fi|pudotettu}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|intoxicated as a result of drugs or alcohol}}
+* Finnish: {{t+|fi|päihtynyt}}
+{{trans-mid}}
+{{trans-bottom}}
+
+===Noun===
+{{en-noun}}
+[[File:Max-cut.svg|thumb|A '''cut''' (graph theory sense) in a graph with five vertices, which partitioned it into two subgroups (one with white vertices and another with black vertices).]]
+
+# An opening resulting from cutting.
+#: {{ux|en|Look at this '''cut''' on my finger!}}
+# The act of [[cutting]].
+#: {{ux|en|He made a fine '''cut''' with his sword.}}
+# The [[result]] of cutting.
+#: {{ux|en|a smooth or clear '''cut'''}}
+# A notch, passage, or channel made by cutting or digging; a furrow; a groove.
+#: {{ux|en|a '''cut''' for a railroad}}
+#* Knolles
+#*: This great '''cut''' or ditch Secostris {{...}} purposed to have made a great deal wider and deeper.
+# (specifically) An artificial [[navigation]] as distinguished from a [[navigable]] river
+# A [[share]] or [[portion]].
+#: {{ux|en|The lawyer took a '''cut''' of the profits.}}
+# {{lb|en|cricket}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
+# {{lb|en|cricket}} [[sideways|Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
+# {{lb|en|sports}} In [[lawn tennis]], etc., a slanting stroke causing the ball to spin and bound irregularly; also, the spin thus given to the ball.
+# {{lb|en|golf}} In a strokeplay competition, the early elimination of those players who have not then attained a preannounced score, so that the rest of the competition is less pressed for time and more entertaining for spectators.
+# {{lb|en|theatre}} A passage omitted or to be omitted from a play.
+#: {{ux|en|The [[director]] asked the [[cast]] to note down the following '''cuts'''.}}
+# {{lb|en|cinema}} A particular version or [[edit]] of a film.
+# The act or right of dividing a deck of playing cards.
+#: {{ux|en|The player next to the dealer makes a '''cut''' by placing the bottom half on top.}}
+# The manner or style a garment etc. is fashioned in.
+#: {{ux|en|I like the '''cut''' of that suit.}}
+#* Shakespeare
+#*: with eyes severe and beard of formal '''cut'''
+# A [[slab]], especially of meat.
+#: {{ux|en|That’s our finest '''cut''' of meat.}}
+# {{lb|en|fencing}} An attack made with a chopping motion of the blade, landing with its edge or point.
+# A deliberate [[snub]], typically a refusal to return a [[bow]] or other acknowledgement of acquaintance.
+#* Washington Irving
+#*: Rip called him by name, but the cur snarled, snapped his teeth, and passed on. This was an unkind '''cut''' indeed.
+# A definable part, such as an individual [[song]], of a [[recording]], particularly of [[commercial]] records, [[audio]] [[tape]]s, [[CD]]s, etc.
+#: {{ux|en|The drummer on the last '''cut''' of their CD is not identified.}}
+# {{lb|en|archaeology}} A [[truncation]], a context that represents a moment in time when other archaeological [[deposit]]s were removed for the creation of some feature such as a [[ditch]] or [[pit]].
+# A [[haircut]].
+# {{lb|en|graph theory}} The [[partition]] of a [[graph]]’s [[vertex|vertices]] into two subgroups.
+# A string of railway cars coupled together.
+# An engraved block or plate; the impression from such an engraving.
+#: {{ux|en|a book illustrated with fine '''cuts'''}}
+# {{lb|en|obsolete}} A common [[workhorse]]; a [[gelding]].
+#* Beaumont and Fletcher
+#*: He'll buy me a '''cut''', forth for to ride.
+# {{lb|en|slang|dated}} The failure of a [[college]] [[officer]] or [[student]] to be present at any appointed exercise.
+# A [[skein]] of [[yarn]].
+#: {{rfquotek|Wright}}
+# {{lb|en|slang}} That which is used to dilute or adulterate a recreational drug.
+#: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
+# {{lb|en|fashion}} A notch shaved into an eyebrow.
+# {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
+
+====Derived terms====
+{{der3|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|{{l|en|final cut}}, {{l|en|make the final cut}}|fine cut|French cut|{{l|en|jump cut}}, {{l|en|jump-cut}}|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut|lang=en}}
+
+====Translations====
+{{trans-top|opening resulting from cutting}}
+* Aromanian: {{t|rup|tãljiturã|f}}
+* Bulgarian: {{t+|bg|разрез|m}}
+* Danish: {{t|da|snitsår|n}}, {{t|da|skramme|c}}
+* Dutch: {{t+|nl|snee}}
+* Finnish: {{t+|fi|haava}}, {{t+|fi|viilto}}, {{t|fi|viiltohaava}}
+* French: {{t+|fr|coupure|f}}, {{t+|fr|entaille|f}}
+* Galician: {{t+|gl|corte|m}}
+* German: {{t+|de|Schnitt|m}}
+* Greek: {{t+|el|κόψιμο|n}}, {{t+|el|τομή|f}}
+*: Ancient Greek: {{t|grc|τομή|f}}
+* Hebrew: {{t+|he|חתך|m|tr=khétekh}}
+* Icelandic: {{t+|is|skurður|m}}
+* Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
+{{trans-mid}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|برین}}
+* Maori: {{t|mi|motunga}}
+* Portuguese: {{t+|pt|corte|m}}
+* Romanian: {{t+|ro|tăietură|f}}, {{t+|ro|incizie|f}}
+* Russian: {{t+|ru|поре́з|m}} ''wound'', {{t+|ru|разре́з|m}}
+* Scottish Gaelic: {{t|gd|gearradh|m}}
+* Spanish: {{t+|es|corte|m}}
+* Sundanese: {{t|su|raheut}}
+* Swedish: {{t+|sv|skärsår|n}}
+* Tagalog: {{t|tl|hiwa}}
+* Turkish: {{t+|tr|kesik}}
+* Zazaki: {{t|zza|değiz}}
+{{trans-bottom}}
+
+{{trans-top|act of cutting}}
+* Bulgarian: {{t+|bg|рязане|n}}
+* Czech: {{t+|cs|řez}}, {{t|cs|říznutí}}
+* Danish: {{t|da|hug|n}}
+* Finnish: {{t+|fi|leikkaus}}, {{t+|fi|viilto}}
+* French: {{t+|fr|coupe|f}}, {{t+|fr|entaille|f}}
+* Galician: {{t+|gl|corte|m}}
+* Georgian: {{t|ka|გაჭრა}}
+* German: {{t+|de|Schnitt|m}}
+* Greek: {{t+|el|κόψιμο}}
+* Hebrew: {{t|he|חיתוך|m|tr=khitúkh}}
+* Icelandic: {{t+|is|skurður|m}}
+{{trans-mid}}
+* Italian: {{t+|it|taglio|m}}
+* Latvian: {{t|lv|cirtiens}}
+* Norwegian: {{t|no|kutt|n}}
+* Portuguese: {{t+|pt|corte|m}}
+* Romanian: {{t+|ro|tăiere|f}}
+* Russian: {{t+|ru|ре́зание|n}}
+* Scottish Gaelic: {{t|gd|gearradh|m}}
+* Spanish: {{t+|es|corte|m}}
+* Swedish: {{t+|sv|snitt|n}}
+* Turkish: {{t+|tr|kesme}}
+* Zazaki: {{t|zza|qesnayış}}, {{t|zza|qesnaış}} {{qualifier|Northern Zazaki}}
+{{trans-bottom}}
+
+{{trans-top|result of cutting}}
+* Danish: {{t|da|snit|n}}
+* Finnish: {{t+|fi|leikkaus}}, {{t+|fi|viilto}}; {{t|fi|viipale}}, {{t|fi|siivu}}; {{t+|fi|haava}} {{q|wound}}
+* French: {{t+|fr|coupe|f}}
+* Galician: {{t+|gl|corte|m}}
+* German: {{t+|de|Schnitt|m}}
+* Icelandic: {{t|is|afskurður|m}}
+{{trans-mid}}
+* Italian: {{t+|it|taglio|m}}
+* Portuguese: {{t+|pt|corte|m}}
+* Romanian: {{t+|ro|tăietură|f}}
+* Scottish Gaelic: {{t|gd|gearradh|m}}
+* Spanish: {{t+|es|corte|m}}
+* Swedish: {{t+|sv|snitt|n}}
+{{trans-bottom}}
+
+{{trans-top|notch, passage, or channel made by cutting or digging}}
+* Finnish: {{t+|fi|leikkaus}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|artificial navigation as distinguished from a navigable river}}
+* Finnish: {{t+|fi|kanava}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|share or portion}}
+* Finnish: {{t|fi|osuus}}; {{t|fi|siivu}} {{q|informal}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|in cricket, batsman's shot played with a swinging motion}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|in cricket, sideways movement of the ball through the air}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|lawn tennis: slanting stroke; resulting spin}}
+* Finnish: {{t|fi|kierrelyönti}} {{q|stroke}}; {{t|fi|kierre}} {{q|spin}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|golf: early elimination of worse performers}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|theatre: passage omitted or to be omitted from a play}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|cinema: particular version or edit of a film}}
+* Finnish: {{t|fi|versio}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|act of deviding a deck of playing cards}}
+* Czech: {{t|cs|snímání}}
+* Danish: {{t|da|aftagning|c}}
+* Finnish: {{t+|fi|nosto}}
+* French: {{t+|fr|coupe|f}}
+* Greek: {{t+|el|κόψιμο|n}}
+* Italian: {{t+|it|alzata|f}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|corte|f}}
+* Romanian: {{t+|ro|tăiere|f}}
+* Swedish: {{t+|sv|giv|c}}
+* Turkish: {{t+|tr|kesmek}}
+* Zazaki: {{t|zza|qesnayen}}, {{t|zza|bırnayen}} {{qualifier|Central Zazaki}}, {{t|zza|cı kerden}} {{qualifier|Northern Zazaki}}
+{{trans-bottom}}
+
+{{trans-top|manner or style a garment is fashioned in}}
+* Bulgarian: {{t+|bg|кройка|f}}
+* Catalan: {{t|ca|costura|f}}
+* Danish: {{t|da|snit|n}}, {{t|da|mode|c}}
+* Dutch: {{t+|nl|snit}}
+* Finnish: {{t+|fi|leikkaus}}
+* French: {{t+|fr|coupe|f}}
+* German: {{t+|de|Schnitt|m}}
+* Greek: {{t+|el|κόψιμο|n}}
+{{trans-mid}}
+* Icelandic: {{t+|is|snið|n}}
+* Italian: {{t+|it|taglia|f}}, {{t+|it|taglio|m}}
+* Portuguese: {{t+|pt|corte|m}}
+* Russian: {{t+|ru|покро́й|m}}
+* Spanish: {{t+|es|corte|m}}
+* Swedish: {{t|sv|skärning|c}}, {{t+|sv|snitt|n}}
+* Turkish: {{t+|tr|kesim}}
+* Zazaki: {{t|zza|bırnayış}}, {{t|zza|qesnayış}} {{qualifier|Central zazaki}}
+{{trans-bottom}}
+
+{{trans-top|slab of meat}}
+* Danish: {{t|da|udskæring|c}}, {{t+|da|stykke|n}}
+* Dutch: {{t+|nl|stuk|n}}
+* Finnish: {{t+|fi|pala}}
+* French: {{t+|fr|coupe|f}}
+* Greek: {{t+|el|κομμάτι|n}}
+* Hebrew: {{t+|he|חתיכה|f|tr=khatikhá}}
+{{trans-mid}}
+* Italian: {{t+|it|taglio|m}}, {{t+|it|pezzo|m}}
+* Norwegian:
+*: Bokmål: {{t+|nb|stykningsdel|m}}, {{t+|nb|stykke|n}}
+* Portuguese: {{t+|pt|corte|m}}
+* Spanish: {{t+|es|corte|m}}
+{{trans-bottom}}
+
+{{trans-top|fencing: attack made with a chopping motion of the blade}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|deliberate snub}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|definable part of a music recording}}
+* Finnish: {{t+|fi|piisi}}, {{t|fi|biisi}}, {{l|fi|raita}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|archaeology: truncation}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|haircut}}
+
+{{trans-top|partition of a graph’s vertices into two subgroups}}
+* Finnish: {{t+|fi|leikkaus}}
+* Italian: {{t+|it|taglio|m}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|corte|m}}
+{{trans-bottom}}
+
+{{trans-top|string of railway cars coupled together}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|engraved block or plate; the impression from such an engraving}}
+* Finnish: {{t|fi|kaiverrus}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|common workhorse|gelding}}
+
+{{trans-top|failure of a college officer or student to be present at any appointed exercise}}
+* Finnish: {{t|fi|ohari}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|skein of yarn|skein}}
+
+{{trans-top|slang: that which is used to dilute or adulterate a recreational drug}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|fashion: notch shaved into an eyebrow}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|bodybuilding: time period when one tries to lose fat while retaining muscle mass}}
+* Finnish: {{t|fi|rasvanpolttokausi}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+* Romanian: {{t+check|ro|tăietură}}
+{{trans-mid}}
+* {{ttbc|te}}: {{t+check|te|కోత}}, {{t+check|te|గాటు}}
+{{trans-bottom}}
 
 ===Anagrams===
 * {{anagrams|en|a=ctu|TUC|UTC}}
