--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -25,6 +25,9 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * American English prefers a comma after ''i.e.''; in British English a comma does not follow ''i.e.''
 * Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in ''i.&nbsp;e.'', or whether this matters at all. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviation|"Abbreviation" on Wikipedia]]).
 
+====Synonyms====
+* See also [[Thesaurus:in other words]]
+
 ====Translations====
 {{trans-top|that is}}
 * Afrikaans: {{t+|af|d.w.s.}}
