--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -113,6 +113,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Albanian: {{t+|sq|flas}}
 * Arabic: {{t|ar|تَحَدَّثَ}}, {{t|ar|تَكَلَّمَ}}
 *: Moroccan Arabic: {{t|ary|هْدر}}
+*: North Levantine Arabic: {{t|apc|حكى|tr=ḥaka}}
 * Armenian: {{t+|hy|խոսել}}
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}
