--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -63,7 +63,7 @@ From {{der|en|la|curvus|t=bent, curved}}.
 * Japanese: {{t+|ja|曲線|tr=きょくせん, kyokusen}}
 * Khmer: {{t+|km|របត់|tr=rɔbɑt}}
 {{trans-mid}}
-* Latin: {{t|la|curvāmen|n}}
+* Latin: {{t|la|curvāmen|n}}, {{t|la|flexus|m}}
 * Latvian: {{t|lv|līkums|m}}
 * Lithuanian: {{t|lt|linkis|m}}, {{t|lt|vingis|m}}
 * Macedonian: {{t|mk|сви́ок|m}}
