--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -84,7 +84,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Italian: {{t+|it|galleggiare}}
 * Japanese: {{t+|ja|浮かぶ|tr=ukabu}}, {{t+|ja|浮く|tr=uku}}, {{t|ja|漂う|tr=tadayou}}
 * Khmer: {{t|km|អន្ដែត|tr=on-dait}}
-* Latin: {{t|la|fluito}}
+* Latin: {{t|la|fluitō}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|plūduriuoti|impf}}, {{t+|lt|plaukti|impf}}
 * Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}, {{t|mi|kōrewarewa}}
