--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -167,6 +167,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * German: {{t+|de|gleiten}}, {{t+|de|schweben}}
 * Hungarian: {{t+|hu|lebeg}}
 * Japanese: {{t+|ja|飛ぶ|tr=tobu}}, {{t|ja|浮遊する|tr=fuyūsuru}}, {{t+|ja|浮く|tr=uku}}
+* Latin: {{t|la|volito}}
 * Malay:
 *: Jawi: {{t|ms|امبڠ|sc=Arab}}
 *: Rumi: {{t|ms|ambang}}
