--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -126,6 +126,6 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[uy]], [[oải]], [[nuỵ]], [[oa]]|rs=人08}}
+{{vi-hantu|[[nuỵ]], [[oa]]|rs=人08}}
 
 # {{defn|lang=vi|sort=人08}}
