--- a/en/旣/旣.16908.wikitext
+++ b/en/旣/旣.16908.wikitext
@@ -1,6 +1,6 @@
 {{also|既}}
 {{character info/new}}
-{{character info/new|0x2f8cb}}
+{{character info|0x2F8CB}}
 ==Translingual==
 
 ===Han character===
