--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,7 +1,7 @@
 {{also|israel|Ísrael|Israèl|İsrael|Israël}}
 ==English==
 [[File:Flag of Israel.svg|thumb|Flag of the State of Israel]]
-[[File:ISR orthographic.svg|thumb|Location map of the State of Israel]]
+[[File:Israel (orthographic projection) with disputed territories.svg|thumb|Location map of the State of Israel, with disputed territories shown in light green]]
 
 ===Alternative forms===
 * {{l|en|Isr.}} {{qualifier|abbreviation}}
